--- a/app/src/main/res/layout/fragment_item_list_personal.xml
+++ b/app/src/main/res/layout/fragment_item_list_personal.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.example.netclanexplorerclone.ItemFragment"
+    android:name="com.example.netclanexplorerclone.PersonalItemFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ItemFragment"
-    tools:listitem="@layout/fragment_item" />
+    tools:context=".PersonalItemFragment"
+    tools:listitem="@layout/fragment_item_personal" />
