--- a/app/src/main/res/drawable/progressdrawabledesign.xml
+++ b/app/src/main/res/drawable/progressdrawabledesign.xml
@@ -4,6 +4,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="25dp"/>
             <stroke android:color="@color/black"/>
+            <solid android:color="@color/colorGray"/>
         </shape>
     </item>
 </layer-list>
