--- a/app/src/main/res/layout/fragment_item_personal.xml
+++ b/app/src/main/res/layout/fragment_item_personal.xml
@@ -16,7 +16,7 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardViewRear"
                         android:layout_width="365dp"
-                        android:layout_height="250dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="25dp"
                         android:layout_marginStart="40dp"
                         app:cardBackgroundColor="@color/white"
@@ -74,7 +74,7 @@
                         <ProgressBar
                             android:id="@+id/progressBar"
                             style="?android:attr/progressBarStyleHorizontal"
-                            android:layout_width="200dp"
+                            android:layout_width="130dp"
                             android:layout_height="13dp"
                             android:layout_marginLeft="70dp"
                             android:layout_marginTop="102dp"
