--- a/app/src/main/res/layout/fragment_merchant_item.xml
+++ b/app/src/main/res/layout/fragment_merchant_item.xml
@@ -30,15 +30,6 @@
             tools:ignore="MissingConstraints"
             >
             <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="15dp"
-                android:text="+ INVITE"
-                android:textColor="@color/dblue" />
-            <TextView
                 android:id="@+id/itemNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -79,7 +70,7 @@
                 android:layout_height="27dp"
                 app:srcCompat="@drawable/unnamed"
                 android:layout_marginTop="105dp"
-                android:layout_marginStart="98dp"/>
+                android:layout_marginStart="80dp"/>
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -87,26 +78,21 @@
                 android:layout_height="27dp"
                 app:srcCompat="@drawable/contacts"
                 android:layout_marginTop="105dp"
-                android:layout_marginStart="138dp"/>
+                android:layout_marginStart="116dp"/>
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                app:srcCompat="@drawable/location"
+                android:layout_marginTop="105dp"
+                android:layout_marginStart="152dp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="135dp"
-                android:gravity="left"
-                android:text="Coffee | Business | Friendship"
-                android:textAlignment="gravity"
-                android:textColor="#10334e"
-                android:textSize="14dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                />
             <TextView
                 android:id="@+id/content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginTop="156dp"
+                android:layout_marginTop="138dp"
                 android:layout_marginBottom="15dp"
                 android:gravity="left"
                 android:paddingLeft="20dp"
