--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -63,13 +63,28 @@
     </LinearLayout>
 
     <!-- Right Button -->
-    <ImageButton
-        android:id="@+id/btn_right"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_gravity="end"
-        android:layout_marginEnd="20dp"
-        android:background="@color/transparent"
-        android:src="@drawable/baseline_checklist_24" />
+        android:layout_marginEnd="20dp">
+        <ImageButton
+            android:id="@+id/btn_right"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/transparent"
+            android:src="@drawable/baseline_checklist_24"
+            android:layout_gravity="center" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:background="@color/transparent"
+            android:text="Refine"
+            android:layout_gravity="center"
+            />
+    </LinearLayout>
 
 </androidx.appcompat.widget.Toolbar>
