--- a/app/src/main/res/layout/fragment_refine.xml
+++ b/app/src/main/res/layout/fragment_refine.xml
@@ -46,7 +46,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.416"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:spinnerMode="dropdown"
+        style="@android:style/Widget.Spinner.DropDown"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -64,6 +66,7 @@
         android:id="@+id/editTextText2"
         android:layout_width="358dp"
         android:layout_height="50dp"
+        android:paddingLeft="10dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/background"
         android:ems="10"
@@ -300,6 +303,17 @@
         app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toggleButton3" />
+
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="192dp"
+        android:layout_height="48dp"
+        android:text="Save &amp; Explore"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toggleButton6"
+        app:layout_constraintVertical_bias="0.317" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
