--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -64,15 +64,17 @@
 
     <!-- Right Button -->
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btn_right"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:orientation="vertical"
         android:layout_gravity="end"
-        android:layout_marginEnd="20dp">
+        android:layout_marginEnd="7dp"
+        android:layerType="hardware">
         <ImageButton
-            android:id="@+id/btn_right"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_marginTop="9dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:src="@drawable/baseline_checklist_24"
             android:layout_gravity="center" />
