--- a/app/src/main/res/layout/fragment_business_item.xml
+++ b/app/src/main/res/layout/fragment_business_item.xml
@@ -131,6 +131,6 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:srcCompat="@drawable/business" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
