--- a/app/src/main/res/layout/fragment_item_personal.xml
+++ b/app/src/main/res/layout/fragment_item_personal.xml
@@ -124,6 +124,6 @@
                         android:id="@+id/imageView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        tools:srcCompat="@tools:sample/avatars" />
+                        app:srcCompat="@drawable/personal" />
                 </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
