--- a/app/src/main/res/layout/fragment_merchant_item.xml
+++ b/app/src/main/res/layout/fragment_merchant_item.xml
@@ -117,6 +117,6 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:srcCompat="@drawable/merchant" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
